@@ -1,5 +1,6 @@
 2011-09-07  Antonio Ceballos  <aceballos@gmail.com>
 
+	* src/components.cc: fix race condition.
 	* configure.ac: version 6.0.1
 	* NEWS: changes in version 6.0.1
 	* INSTALL: remove info not related to installation
